trying to make services tabs and try to fix tabs problem by adding img and headline on same column with vertical align

--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
     text-decoration: none;
   }
 
+ 
+
 
 header nav{
     height: 64px;
@@ -14,6 +16,9 @@ header nav{
 
 .nav-footer-container{
     padding:0 72px 0 72px;
+}
+.section-container{
+    padding:66px 136px 0 136px;
 }
 
 header nav ul{
@@ -43,4 +48,17 @@ header nav ul li:hover{
     border-bottom-left-radius: 50%;
     border-bottom-right-radius: 50%;
 }
+.section {
+    height: 90vh;
+    background-image: url(images/bg.jpg);
+    background-size: cover;
+    background-position: center center;
+}
 
+#tabs-size{
+    background-color: white;
+    width: 100%;
+    height: 100px;
+}
+#service-name{
+color: black;}
